scaffold/typescript-go-main/testdata/baselines/reference/submodule/conformance/jsdocTemplateConstructorFunction.errors.txt
templateTagOnConstructorFunctions.js(15,12): error TS2304: Cannot find name 'T'.
templateTagOnConstructorFunctions.js(16,15): error TS2304: Cannot find name 'T'.


==== templateTagOnConstructorFunctions.js (2 errors) ====
    /**
     * @template U
     * @typedef {(u: U) => U} Id
     */
    /**
     * @param {T} t
     * @template T
     */
    function Zet(t) {
        /** @type {T} */
        this.u
        this.t = t
    }
    /**
     * @param {T} v
               ~
!!! error TS2304: Cannot find name 'T'.
     * @param {Id<T>} id
                  ~
!!! error TS2304: Cannot find name 'T'.
     */
    Zet.prototype.add = function(v, id) {
        this.u = v || this.t
        return id(this.u)
    }
    var z = new Zet(1)
    z.t = 2
    z.u = false
    